--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 accelerate==1.12.0
+altair==6.0.0
+annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.1
 appnope==0.1.4
@@ -10,10 +12,14 @@ async-lru==2.0.5
 attrs==25.4.0
 babel==2.17.0
 beautifulsoup4==4.14.3
+bitsandbytes==0.42.0
 bleach==6.3.0
+blinker==1.9.0
+cachetools==6.2.4
 certifi==2026.1.4
 cffi==2.0.0
 charset-normalizer==3.4.4
+click==8.3.1
 comm==0.2.3
 cryptography==46.0.3
 debugpy==1.8.19
@@ -21,10 +27,13 @@ decorator==5.2.1
 defusedxml==0.7.1
 executing==2.2.1
 faiss-cpu==1.13.2
+fastapi==0.128.0
 fastjsonschema==2.21.2
 filelock==3.20.3
 fqdn==1.5.1
 fsspec==2026.1.0
+gitdb==4.0.12
+GitPython==3.1.46
 h11==0.16.0
 hf-xet==1.2.0
 httpcore==1.0.9
@@ -69,6 +78,7 @@ MarkupSafe==3.0.3
 matplotlib-inline==0.2.1
 mistune==3.2.0
 mpmath==1.3.0
+narwhals==2.15.0
 nbclient==0.10.4
 nbconvert==7.16.6
 nbformat==5.10.4
@@ -81,6 +91,7 @@ orjson==3.11.5
 ormsgpack==1.12.1
 overrides==7.7.0
 packaging==25.0
+pandas==2.3.3
 pandocfilters==1.5.1
 parso==0.8.5
 pdfminer.six==20251230
@@ -90,18 +101,23 @@ pillow==12.1.0
 platformdirs==4.5.1
 prometheus_client==0.23.1
 prompt_toolkit==3.0.52
+protobuf==6.33.4
 psutil==7.2.1
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==22.0.0
 pycparser==2.23
 pydantic==2.12.5
 pydantic_core==2.41.5
+pydeck==0.9.1
 Pygments==2.19.2
 pypdfium2==5.3.0
 python-dateutil==2.9.0.post0
 python-json-logger==4.0.0
+pytz==2025.2
 PyYAML==6.0.3
 pyzmq==27.1.0
+rank-bm25==0.2.2
 referencing==0.37.0
 regex==2025.11.3
 requests==2.32.5
@@ -116,14 +132,18 @@ scipy==1.17.0
 Send2Trash==2.0.0
 sentence-transformers==5.2.0
 six==1.17.0
+smmap==5.0.2
 soupsieve==2.8.1
 stack-data==0.6.3
+starlette==0.50.0
+streamlit==1.53.0
 sympy==1.14.0
 tenacity==9.1.2
 terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.4.0
 tokenizers==0.22.2
+toml==0.10.2
 torch==2.2.2
 tornado==6.5.4
 tqdm==4.67.1
@@ -135,6 +155,7 @@ tzdata==2025.3
 uri-template==1.3.0
 urllib3==2.6.3
 uuid_utils==0.13.0
+uvicorn==0.40.0
 wcwidth==0.2.14
 webcolors==25.10.0
 webencodings==0.5.1
